First commited as before_62579_rev1