@@ -12,6 +12,7 @@ package org.eclipse.ui.internal.preferences;
 
 import java.util.HashSet;
 import java.util.Set;
+
 import org.eclipse.core.runtime.Preferences;
 
 /**
@@ -20,7 +21,12 @@ import org.eclipse.core.runtime.Preferences;
 public final class PreferencesAdapter extends PropertyMapAdapter {
     private Preferences store;
 
-    private Preferences.IPropertyChangeListener listener = event -> firePropertyChange(event.getProperty());
+    private Preferences.IPropertyChangeListener listener = new Preferences.IPropertyChangeListener() {
+        @Override
+		public void propertyChange(Preferences.PropertyChangeEvent event) {
+            firePropertyChange(event.getProperty());
+        }
+    };
 
     public PreferencesAdapter(Preferences toConvert) {
         this.store = toConvert;
@@ -40,8 +46,12 @@ public final class PreferencesAdapter extends PropertyMapAdapter {
 	public Set keySet() {
         Set result = new HashSet();
 
-		for (String name : store.propertyNames()) {
-			result.add(name);
+        String[] names = store.propertyNames();
+
+        for (int i = 0; i < names.length; i++) {
+            String string = names[i];
+
+            result.add(string);
         }
 
         return result;
@@ -66,7 +76,7 @@ public final class PreferencesAdapter extends PropertyMapAdapter {
         }
 
         if (propertyType == Integer.class) {
-			return Integer.valueOf(store.getInt(propertyId));
+            return new Integer(store.getInt(propertyId));
         }
 
         if (propertyType == Long.class) {
